--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
 					<h2 style="display:block;margin:0.4em auto;font-family: 'MyFont';text-align: center;font-weight: bold;" data-aos="flip-down" class = "animated zoomInLeft">
-						utfive-<br> Know the truth behind
+						Know the truth behind<br> 
 					</h2>
 					<p style="text-align: center;font-family: 'MyFont';font-size: 18px;" data-aos="flip-left" class = "animated zoomIn">Get every important news supported by multiple reliable sources and verify any fake news in just three simple steps.</p>
 					<!--
@@ -367,7 +367,7 @@ It also lets you verify/fake-check any suspicious news or information in just th
 			<div class="row" data-aos = "zoom-out-down">
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
-						<img src="features/sources.png" style="width: 40%;height: 40%;">
+						<img src="features/magnify.png" style="width: 40%;height: 40%;">
 						<a href="#" class="title">
 							<h3 style="font-family: 'MyFont';color:grey;">Important news supported by multiple reliable sources
 </h3>
@@ -380,7 +380,7 @@ It also lets you verify/fake-check any suspicious news or information in just th
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="features/magnify.png" style="width: 40%;height: 40%;">
+							<img src="features/fakenews.png" style="width: 40%;height: 40%;">
 							<h3 style="font-family: 'MyFont';color:grey;">Stay updated with all trending fake news stories</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
@@ -391,8 +391,8 @@ It also lets you verify/fake-check any suspicious news or information in just th
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="features/like.png" style="width: 40%;height: 40%;">
-							<h3 style="font-family: 'MyFont';color:grey;">Like and share any news or fake-check that you like
+							<img src="features/fake2.png" style="width: 40%;height: 40%;">
+							<h3 style="font-family: 'MyFont';color:grey;">Fake-Check section to verify any news in just three simple steps
 </h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
@@ -406,8 +406,8 @@ It also lets you verify/fake-check any suspicious news or information in just th
 				<div class="col-lg-4 col-md-6">
 					<div class="single-feature">
 						<a href="#" class="title">
-							<img src="features/fakenews.png" style="width: 40%;height: 40%;">
-							<h3 style="font-family: 'MyFont';color:grey;">Fake-Check section to verify any news in just three simple steps</h3>
+							<img src="features/like.png" style="width: 40%;height: 40%;">
+							<h3 style="font-family: 'MyFont';color:grey;">Like and share any news or fake-check that you like</h3>
 						</a>
 						<p style="font-family: 'MyFont';font-size: 18px;color:#C0C0C0">
 							 
@@ -463,30 +463,30 @@ It also lets you verify/fake-check any suspicious news or information in just th
 			<div class="row" data-aos = "zoom-out-down">
 				<div class="owl-carousel owl-screenshot">
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/a.png" alt="">
+						<img class="img-fluid" src="img/ss2/c11.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/b.png" alt="">
+						<img class="img-fluid" src="img/ss2/d1.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/c.png" alt="">
+						<img class="img-fluid" src="img/ss2/e1.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/d.png" alt="">
+						<img class="img-fluid" src="img/ss2/f1.png" alt="">
 					</div>
 
 
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/e.png" alt="">
+						<img class="img-fluid" src="img/ss2/h1.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/f.png" alt="">
+						<img class="img-fluid" src="img/ss2/a1.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/g.png" alt="">
+						<img class="img-fluid" src="img/ss2/g1.png" alt="">
 					</div>
 					<div class="single-screenshot">
-						<img class="img-fluid" src="ss2/h.png" alt="">
+						<img class="img-fluid" src="img/ss2/b1.png" alt="">
 					</div>
 				</div>
 			</div>
