--- a/index_team.html
+++ b/index_team.html
@@ -326,7 +326,7 @@ text-shadow: 1px 0 black;
                 </figcaption>
               </figure>
               <h4>Buddha Goutham Hima Sekhar</h4>
-              <p>CTO</p>
+              <p>Chief Technical Officer</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
 
@@ -405,7 +405,7 @@ text-shadow: 1px 0 black;
                 </figcaption>
               </figure>
               <h4>Jyotiman Barman</h4>
-              <p>Content Curator</p>
+              <p>Graphic Designer</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
 
