--- a/index_team.html
+++ b/index_team.html
@@ -192,9 +192,9 @@
       <div class="row align-items-center justify-content-between d-flex">
         <div id="logo" class="animated bounce" >
           <a href="index.html" style="text-decoration: none;font-family: 'Open Sans';font-size: 23px;color:black;    
-letter-spacing:2px;
-font-weight:900;
-text-shadow: 1px 0 black;
+letter-spacing:1px;
+font-weight:1000;
+text-shadow: 1px 1px black;
 "><img src="img/logo.png" alt="" title="" style="width: 12%;height: 12%;" />utfive</a>
         </div>
         <nav id="nav-menu-container">
@@ -405,7 +405,7 @@ text-shadow: 1px 0 black;
                 </figcaption>
               </figure>
               <h4>Jyotiman Barman</h4>
-              <p>Graphic Designer</p>
+              <p>Graphics Designer</p>
             </div><!-- /.team-member-->
           </div><!-- /.col-md-4 -->
 
