--- a/beta.html
+++ b/beta.html
@@ -238,7 +238,7 @@ By saying that, we mean to say that we want them not to trust any information bl
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h2 style="font-family: 'MyFont';font-weight: bold;">Our Mission</h2>
-						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">At Utfive, our mission is to educate and empower people to fight against fake news, misinformation, and biased news using technology
+						<p id = "pop" class = "lo" style="font-family: 'MyFont';font-size: 18px;text-align: left;color: #808080">At Utfive, our mission is to educate and empower people to fight against fake news, misinformation, and biased news using technology.
 						</p></div></div></div></div></section>
 
 						<div id="features">
@@ -247,7 +247,7 @@ By saying that, we mean to say that we want them not to trust any information bl
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
 					<div class="section-title text-center">
-						<h2 style="font-family: 'MyFont';" data-aos = "slide-up">Important features of our Ecosystem </h2>
+						<h2 style="font-family: 'MyFont';" data-aos = "slide-up">Important parts of our mission </h2>
 						<p style="font-family: 'MyFont';font-size: 18px;" data-aos = "slide-down"> 
 
 						</p>
