--- a/beta.html
+++ b/beta.html
@@ -197,7 +197,7 @@
 						<li><a href="index_team.html" style="font-family: 'MyFont';font-size: 18px;">Team</a></li>
 						</a></li>
 
-						<li><a href="beta.html" style="font-family: 'MyFont';font-size: 18px;color: red;font-weight: bold;">Our Vision</a></li>
+						<li><a href="beta.html" style="font-family: 'MyFont';font-size: 18px;color: red;font-weight: bold;">Vision and Mission</a></li>
 						</a></li>
 							<!--
 							<ul>
